--- a/projects/bio-angular/package.json
+++ b/projects/bio-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boardgame.io-angular",
-  "version": "0.24.0-beta.2",
+  "version": "0.24.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/turn-based/boardgame.io-angular.git"
